@@ -134,6 +134,7 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
+importFrom(ggplot2,ylim)
 importFrom(ggseqlogo,geom_logo)
 importFrom(ggseqlogo,ggseqlogo)
 importFrom(ggseqlogo,theme_logo)
