@@ -1,7 +1,7 @@
 #' Import HOMER motifs.
 #'
 #' Import HOMER formatted motifs. See \url{http://homer.ucsd.edu/homer/motif/}.
-#' Assumed to be DNA motifs. The logodds score is converted to a P-value.
+#' Assumed to be DNA motifs.
 #'
 #' @return `list` [universalmotif-class] objects.
 #'
