@@ -9,7 +9,7 @@
 #' @importFrom methods getClass is new slot "slot<-" validObject as
 #' @importMethodsFrom methods initialize show
 #' @importFrom ggplot2 aes element_blank facet_wrap ggplot theme ylab xlab
-#' @importFrom ggplot2 geom_line geom_point geom_hline geom_text theme_bw
+#' @importFrom ggplot2 geom_line geom_point geom_hline geom_text theme_bw ylim
 #' @importFrom ggseqlogo ggseqlogo geom_logo theme_logo
 #' @importFrom ggtree ggtree geom_tiplab geom_tiplab2 groupOTU %<+%
 #' @importFrom ggtree geom_tippoint
